--- a/src/pages/quests-list/quests-list.html
+++ b/src/pages/quests-list/quests-list.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the QuestsListPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
@@ -12,11 +6,10 @@
 
 </ion-header>
 
-
 <ion-content padding>
   <h1><ion-icon name="star"></ion-icon> {{quest.title}}</h1>
   <ion-list>
-    <button ion-item *ngFor="let listItem of quest.listOfQuests">
+    <button ion-item *ngFor="let listItem of listOfQuests" (click)="questSelected(listItem)">
       {{listItem.titleJa}} <br>
       {{listItem.titleEn}}
     </button>
