--- a/src/pages/quests/quests.html
+++ b/src/pages/quests/quests.html
@@ -11,8 +11,7 @@
 <ion-content padding>
   <ion-list>
   <button ion-item *ngFor="let quest of quests" (click)="questSelected(quest)">
-    <ion-icon name="star"></ion-icon>
-    {{ quest.title }}
+    {{ quest.rank }}
   </button>
 </ion-list>
 
