--- a/src/pages/quests-list/quests-list.html
+++ b/src/pages/quests-list/quests-list.html
@@ -7,11 +7,12 @@
 </ion-header>
 
 <ion-content padding>
-  <h1><ion-icon name="star"></ion-icon> {{quest.title}}</h1>
+  <h1> {{quest.rank}}</h1>
   <ion-list>
     <button ion-item *ngFor="let listItem of listOfQuests" (click)="questSelected(listItem)">
-      {{listItem.titleJa}} <br>
-      {{listItem.titleEn}}
+      <div class="quest-list-ja">{{listItem.titleJa}}</div>
+      <span class="quest-list-en">{{listItem.titleEn}}</span>
+      <ion-icon *ngIf="isKey(listItem.titleEn)" name="key" item-end></ion-icon>
     </button>
   </ion-list>
 
